# thermo-nerf

./: .flake8  .gitignore  .gitmodules  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml  python.yml
data/: camera_precision_experiment.txz
scripts/: create_pseudo_tex.py  eval_script.py  images_to_nerf_dataset.py  render_video_script.py  test_image_translator.py  test_image_translator_script.py  train_eval_script.py  train_image_translator_script.py  train_script.py  train_script_thermal_tracking.py  train_script_with_tracking.py
scripts/process_thermal/: README.MD  preprocess_thermal.py  visualise_temperature.py
tests/: test_process_thermal.py  test_random_generation.py  test_renderer.py  test_thermal_conversion.py
tests/data/thermal/: temperature_bounds.json
tests/data/trajectories/: camera_path_facade_2.json
tests/data/vanilla_nerf/training-job/vanilla-nerf/date/: config.yml  dataparser_transforms.json  viewer_log_filename.txt
thermo_nerf/: base_renderer.py  model_type.py  rendered_image_modalities.py  thermal_as_rgb.py
thermo_nerf/evaluator/: evaluator.py
thermo_nerf/flir_thermal_images/: custom_flir.py
thermo_nerf/nerfacto_config/: config_nerfacto.py  thermal_nerfacto.py
thermo_nerf/nerfstudio_config/: pipeline_tracking.py
thermo_nerf/render/: renderer.py
thermo_nerf/rgb_concat/: concat_dataset.py  concat_field.py  concat_nerfacto_model.py  config_concat_nerfacto.py  rgbt_renderer.py
thermo_nerf/scripts/: eval_script.py  images_to_nerf_dataset.py  render_video_script.py  thermal_viewer.py  train_eval_script.py
thermo_nerf/scripts/process_thermal/: README.MD  preprocess_thermal.py
thermo_nerf/thermal_nerf/: calculate_threshold.py  config_thermal_nerf.py  thermal_dataparser.py  thermal_dataset.py  thermal_field.py  thermal_field_head.py  thermal_metrics.py  thermal_nerf_model.py  thermal_renderer.py
thermo_nerf/thermal_nerf/scripts/: train_eval_script.py
thermo_scenes/: update_colmap_json.py
thermo_scenes/docs/: Collect_new_dataset.md
thermo_scenes/flir_thermal_images/: custom_flir.py  thermal_visualiser.py
thermo_scenes/scripts/: colorize_thermal_images.py  evaluate_camera_precision.py  images_to_nerf_dataset.py  modify_json.py  preprocess_thermal.py  rename_files.py  rescale_thermal_images.py  visualise_temperatures.py
