[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "1.0.0"
name = "thermo-nerf"
description = 'thermo-nerf'
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pytorch", "thermal", "nerf", "mlflow", "flir"]
dependencies = ["nerfstudio >= 0.1.19", "mlflow >= 2.11.1"]

[project.optional-dependencies]
flir = ["flirimageextractor >= 1.5.3"]

[tool.hatch.build.targets.wheel]
packages = ["thermo_nerf", "thermo_scenes"]

[tool.isort]
profile = "black"
known_third_party = ["nerfstudio", "FlirImageExtractor"]

[project.scripts]
thermoscenes_images_to_nerf_dataset = "thermo_scenes.scripts.images_to_nerf_dataset:main"
thermoscenes_rename_files = "thermo_scenes.scripts.rename_files:main"
thermoscenes_rescale_thermal_images = "thermo_scenes.scripts.rescale_thermal_images:main"
thermoscenes_preprocess_thermal = "thermo_scenes.scripts.preprocess_thermal:main"
